create: styles for header

--- a/index.html
+++ b/index.html
@@ -17,10 +17,14 @@
     <div class="container">
       <div class="header-top">
         <a href="#" class="logo">
-          <img class="logo__image" src="img/horisontal-logo.svg" alt="Logo: Best Tour Plan"></a>
-        <form action="#" class="search">
+          <img class="logo__image" src="img/horisontal-logo.svg" alt="Logo: Best Tour Plan">
+        </a>
+
+        <form action="#" class="search header__search">
           <input type="text" class="search__input" placeholder="Search Location">
-          <button class="search__button"><img src="img/search .svg" alt="Icon: search"></button>
+          <button class="search__button">
+            <img src="img/search .svg" alt="Icon: search">
+          </button>
         </form>
 
         <a href="#" class="user">
