fix: rename header block to navbar

--- a/index.html
+++ b/index.html
@@ -13,14 +13,14 @@
 </head>
 
 <body>
-  <header class="header">
+  <header class="navbar">
     <div class="container">
-      <div class="header-top">
+      <div class="navbar-top">
         <a href="#" class="logo">
           <img class="logo__image" src="img/horisontal-logo.svg" alt="Logo: Best Tour Plan">
         </a>
 
-        <form action="#" class="search header__search">
+        <form action="#" class="search navbar__search">
           <input type="text" class="search__input" placeholder="Search Location">
           <button class="search__button">
             <img src="img/search .svg" alt="Icon: search">
@@ -33,8 +33,8 @@
         </a>
         <!-- /user -->
       </div>
-      <!-- /header-top -->
-      <nav class="header-menu">
+      <!-- /navbar-top -->
+      <nav class="navbar-menu">
         <ul class="navigation">
           <li class="navigation__item">
             <a href="#" class="navigation__link">All Deals</a></li>
@@ -52,7 +52,7 @@
             <a href="#" class="navigation__link">Rodrigues</a></li>
         </ul>
       </nav>
-      <!-- /header-menu -->
+      <!-- /navbar-menu -->
     </div>
     <!-- /container -->
   </header>
