create: responsive table for header

--- a/index.html
+++ b/index.html
@@ -34,7 +34,10 @@
         <!-- /user -->
       </div>
       <!-- /navbar-top -->
-      <nav class="navbar-menu">
+    </div>
+    <!-- /container -->
+    <nav class="navbar-menu">
+      <div class="container">
         <ul class="navigation">
           <li class="navigation__item">
             <a href="#" class="navigation__link">All Deals</a></li>
@@ -51,10 +54,10 @@
           <li class="navigation__item">
             <a href="#" class="navigation__link">Rodrigues</a></li>
         </ul>
-      </nav>
-      <!-- /navbar-menu -->
-    </div>
-    <!-- /container -->
+      </div>
+      <!-- /container -->
+    </nav>
+    <!-- /navbar-menu -->
   </header>
 
 </body>
