--- a/index.html
+++ b/index.html
@@ -64,7 +64,48 @@
     </nav>
     <!-- /navbar-menu -->
   </header>
-
+  <nav class="breadcrumb">
+    <div class="container">
+      <ul class="breadcrumb-list">
+        <li class="breadcrumb-list__item">
+          <a href="" class="breadcrumb-list__link">Home</a>
+        </li>
+        <li class="breadcrumb-list__item">
+          <a href="" class="breadcrumb-list__link">Flash Offers</a>
+        </li>
+        <li class="breadcrumb-list__item">
+          Grand Hilton Hotel
+        </li>
+      </ul>
+    </div>
+    <!-- /.breadcrumb-list -->
+  </nav>
+  <section class="hotel">
+    <div class="container">
+      <div class="hotel-info">
+        <div class="hotel-info__text">
+          <div class="stars">
+            <img src="img/Star.svg" alt="Star">
+            <img src="img/Star.svg" alt="Star">
+            <img src="img/Star.svg" alt="Star">
+            <img src="img/Star.svg" alt="Star">
+            <img src="img/Star.svg" alt="Star">
+          </div>
+          <h1 class="hotel-name hotel-info__name">GRAND HILTON HOTEL</h1>
+          <span class="offer hotel-info__offer">Flash Offer</span>
+          <p class="hotel-description">Half-Board/ All Inclusive + Complimentary Activities + Child Stays Free</p>
+        </div>
+        <!-- /.hotel-info__text -->
+        <div class="ratting hotel-info__ratting">
+          <span class="ratting__text">User Rattings</span>
+          <span class="ratting__counter">4.5/5</span>
+        </div>
+        <!-- /.hotel-info__ratting -->
+      </div>
+      <!-- /.hotel-info -->
+    </div>
+    <!-- /.container -->
+  </section>
 </body>
 
 </html>
