--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Mulish:wght@400;700&family=Nunito:wght@400;700;800&display=swap"
     rel="stylesheet">
+  <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css" />
   <link rel="stylesheet" href="css/style.css">
   <title>Best Tour Plan - Hotel Booking</title>
 </head>
@@ -23,7 +24,7 @@
         <form action="#" class="search navbar__search">
           <input type="text" class="search__input" placeholder="Search Location">
           <button class="search__button">
-            <img src="img/search .svg" alt="Icon: search">
+            <img src="img/search.svg" alt="Icon: search">
           </button>
         </form>
 
@@ -98,14 +99,35 @@
         <!-- /.hotel-info__text -->
         <div class="ratting hotel-info__ratting">
           <span class="ratting__text">User Rattings</span>
-          <span class="ratting__counter">4.5/5</span>
+          <span class="ratting__counter">4.5/</span>
         </div>
         <!-- /.hotel-info__ratting -->
       </div>
       <!-- /.hotel-info -->
+      <div class="hotel-grid">
+        <div class="slider">
+          <!-- Slider main container -->
+          <div class="swiper-container">
+            <!-- Additional required wrapper -->
+            <div class="swiper-wrapper">
+              <!-- Slides -->
+              <div class="swiper-slide"><img src="img/slide.jpg" alt=""></div>
+              <div class="swiper-slide"><img src="img/slide1.jpg" alt=""></div>
+              <div class="swiper-slide"><img src="img/slide2.jpg" alt=""></div>
+            </div>
+            <!-- If we need navigation buttons -->
+            <button class="slider-button slider-button--prev"></button>
+            <button class="slider-button slider-button--next"></button>
+          </div>
+          <!-- /.swiper-container -->
+        </div>
+      </div>
+      <!-- /.hotel-grid -->
     </div>
     <!-- /.container -->
   </section>
+  <script src="js/swiper-bundle.min.js"></script>
+  <script src="js/main.js"></script>
 </body>
 
 </html>
