fixed: hotel-slider images & responsive for reviews

--- a/index.html
+++ b/index.html
@@ -105,22 +105,20 @@
       </div>
       <!-- /.hotel-info -->
       <div class="hotel-grid">
-        <div class="slider hotel__slider">
-          <!-- Slider main container -->
-          <div class="swiper-container">
-            <!-- Additional required wrapper -->
-            <div class="swiper-wrapper">
-              <!-- Slides -->
-              <div class="swiper-slide"><img class="swiper-slide__image" src="img/slide.jpg" alt=""></div>
-              <div class="swiper-slide"><img class="swiper-slide__image" src="img/slide1.jpg" alt=""></div>
-              <div class="swiper-slide"><img class="swiper-slide__image" src="img/slide2.jpg" alt=""></div>
-            </div>
-            <!-- If we need navigation buttons -->
-            <button class="slider-button slider-button--prev"></button>
-            <button class="slider-button slider-button--next"></button>
+
+        <div class="swiper-container hotel__slider hotel-slider">
+          <!-- Additional required wrapper -->
+          <div class="swiper-wrapper">
+            <!-- Slides -->
+            <div class="swiper-slide"><img class="swiper-slide__image" src="img/slide.jpg" alt=""></div>
+            <div class="swiper-slide"><img class="swiper-slide__image" src="img/slide1.jpg" alt=""></div>
+            <div class="swiper-slide"><img class="swiper-slide__image" src="img/slide2.jpg" alt=""></div>
           </div>
-          <!-- /.swiper-container -->
+          <!-- If we need navigation buttons -->
+          <button class="hotel-slider__button hotel-slider__button--prev"></button>
+          <button class="hotel-slider__button hotel-slider__button--next"></button>
         </div>
+        <!-- /.swiper-container -->
         <div class="hotel__wrap">
           <div class="booking">
             <div class="booking__info">
@@ -180,6 +178,99 @@
       </form>
     </div>
     <!-- /.newsletter-wrapper -->
+  </section>
+  <section class="reviews">
+    <div class="container">
+      <h2 class="reviews-title">What people think about us</h2>
+
+      <div class="swiper-container reviews-slider">
+
+        <div class="swiper-wrapper">
+          <div class="swiper-slide">
+            <div class="reviews-slider__item">
+              <div class="reviews-slider__profile">
+                <img src="img/traveller.jpg" alt="Traveller" class="reviews-slider__avatar">
+                <h3 class="reviews-slider__username">Megan Fox</h3>
+                <span class="reviews-slider__date">Stayed 18 Nov, 2019</span>
+                <div class="reviews-slider__ratting">
+                  <img src="img/Star.svg" alt="Star">
+                  <img src="img/Star.svg" alt="Star">
+                  <img src="img/Star.svg" alt="Star">
+                  <img src="img/Star.svg" alt="Star">
+                  <img src="img/Star.svg" alt="Star">
+                </div>
+
+              </div>
+              <!-- /.reviews-slider__profile -->
+              <p class="reviews-slider__text">It was very nice hotel with cleanliness. Staff behavior was good and
+                polite. They welcome us very well. Issue was only that Lift was not in working and we were allotted to
+                3rd floor and amenities articles were in corner of gallery which were giving bad feeling. Breakfast was
+                good and support of the staff was also very nice. Location is not good as per atmosphere, it is very
+                nearby most of the popular places but self location in a narrow street is not good. Overall it was a
+                good experience and could recommend. </p>
+            </div>
+            <!-- /.reviews-slider__item -->
+          </div>
+          <!-- /.swiper-slide -->
+          <div class="swiper-slide">
+            <div class="reviews-slider__item">
+              <div class="reviews-slider__profile">
+                <img src="img/traveller1.jpg" alt="Traveller" class="reviews-slider__avatar">
+                <h3 class="reviews-slider__username">Bradley Pitt</h3>
+                <span class="reviews-slider__date">Stayed 07 Jul, 2018</span>
+                <div class="reviews-slider__ratting">
+                  <img src="img/Star.svg" alt="Star">
+                  <img src="img/Star.svg" alt="Star">
+                  <img src="img/Star.svg" alt="Star">
+                  <img src="img/Star.svg" alt="Star">
+                  <img src="img/Star.svg" alt="Star">
+                </div>
+
+              </div>
+              <!-- /.reviews-slider__profile -->
+              <p class="reviews-slider__text">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Aperiam, aliquam
+                iure saepe ex eveniet vero pariatur aut atque eligendi ipsum consequatur neque laudantium ut dolore
+                cupiditate voluptas quibusdam eos officiis facilis. Nulla cumque perferendis placeat dolor? Provident a,
+                qui quis officiis iure, magnam velit vel ut, animi quo quia adipisci. </p>
+            </div>
+            <!-- /.reviews-slider__item -->
+          </div>
+          <!-- /.swiper-slide -->
+          <div class="swiper-slide">
+            <div class="reviews-slider__item">
+              <div class="reviews-slider__profile">
+                <img src="img/traveller2.jpg" alt="Traveller" class="reviews-slider__avatar">
+                <h3 class="reviews-slider__username">Keanu Reeves</h3>
+                <span class="reviews-slider__date">Stayed 26 Oct, 2019</span>
+                <div class="reviews-slider__ratting">
+                  <img src="img/Star.svg" alt="Star">
+                  <img src="img/Star.svg" alt="Star">
+                  <img src="img/Star.svg" alt="Star">
+                  <img src="img/Star.svg" alt="Star">
+                  <img src="img/Star.svg" alt="Star">
+                </div>
+
+              </div>
+              <!-- /.reviews-slider__profile -->
+              <p class="reviews-slider__text">Tempora, et. Doloribus sunt consectetur est enim, reiciendis soluta nam
+                magnam ratione pariatur, labore ut id. Eum nihil mollitia delectus eveniet hic atque veniam excepturi
+                soluta sit laudantium ut omnis, aperiam nisi iste consequuntur! Iste reprehenderit nemo perferendis
+                quasi et tempore corporis placeatLorem ipsum, dolor sit amet consectetur adipisicing elit. Placeat
+                soluta esse quasi repellendus fugit, perspiciatis odio molestiae? Omnis voluptatibus doloremque sit
+                adipisci ullam architecto sed labore dicta incidunt repellendus, doloribus consectetur? Magnam vel
+                facere vitae ipsam facilis!</p>
+            </div>
+            <!-- /.reviews-slider__item -->
+          </div>
+          <!-- /.swiper-slide -->
+        </div>
+        <!-- swiper-wrapper -->
+
+        <button class="reviews-swiper__button reviews-swiper__button--prev"></button>
+        <button class="reviews-swiper__button reviews-swiper__button--next"></button>
+      </div>
+      <!-- /.reviews-slider -->
+    </div>
   </section>
   <!-- /.newsletter -->
   <script src="js/swiper-bundle.min.js"></script>
