--- a/index.html
+++ b/index.html
@@ -324,7 +324,7 @@
           </ul>
         </div>
         <!-- /.footer__list -->
-        <div class="footer__list foorter__additional">
+        <div class="footer__list footer__additional">
           <h3 class="footer__title">ADDITIONAL INFORMATION</h3>
           <ul class="footer__ul">
             <li class="footer__item"><a href="" class="footer__link">About Us</a></li>
@@ -392,8 +392,24 @@
           </form>
         </div>
         <!-- /.footer__contacts-form -->
+
       </div>
       <!-- /.footer-wrapper -->
+      <div class="footer__end">
+        <div class="footer__conditions">
+          <span class="footer__condition">Disclaimer</span>
+          <span class="footer__condition">Conditions of use</span>
+          <span class="footer__condition">Cancellation policy</span>
+        </div>
+        <div class="footer__pay">
+          <img class="footer__img" src="img/pay/pay-1.png" alt="">
+          <img class="footer__img" src="img/pay/pay-2.png" alt="">
+          <img class="footer__img" src="img/pay/pay-3.png" alt="">
+          <img class="footer__img" src="img/pay/pay-4.png" alt="">
+          <img class="footer__img" src="img/pay/pay-5.png" alt="">
+        </div>
+      </div>
+      <!-- /.footer__end -->
     </div>
     <!-- /.container -->
   </footer>
