--- a/index.html
+++ b/index.html
@@ -14,21 +14,21 @@
 </head>
 
 <body>
-  <header class="navbar">
+  <header class="navbar navbar__mobile--fixed">
     <div class="container">
       <div class="navbar-top">
         <a href="#" class="logo">
           <img class="logo__image" src="img/horisontal-logo.svg" alt="Logo: Best Tour Plan">
         </a>
 
-        <form action="#" class="search navbar__search">
+        <form action="#" class="search navbar__search navbar__search--mobile--hidden">
           <input type="text" class="search__input" placeholder="Search Location">
           <button class="search__button">
             <img src="img/search.svg" alt="Icon: search">
           </button>
         </form>
 
-        <a href="#" class="user navbar__user">
+        <a href="#" class="user navbar__user navbar__user--mobile--hidden">
           <img class="user__avatar" src="img/user-avatar.jpg" alt="Avatar: Nathan">
           <span class="user__name">Nathan</span>
         </a>
@@ -45,6 +45,21 @@
     <nav class="navbar-menu">
       <div class="container">
         <ul class="navigation">
+          <li class="navigation__item  navigation__item navigation__item--mobile--visible">
+            <a href="#" class="user navbar__user navbar__user--mobile--visible">
+              <img class="user__avatar" src="img/user-avatar.jpg" alt="Avatar: Nathan">
+              <span class="user__name user__name--light">Nathan</span>
+            </a>
+            <!-- /user -->
+          </li>
+          <li class="navigation__item navigation__item--mobile--visible">
+            <form action="#" class="search navbar__search navbar__search--mobile--visible">
+              <input type="text" class="search__input" placeholder="Search Location">
+              <button class="search__button">
+                <img src="img/search.svg" alt="Icon: search">
+              </button>
+            </form>
+          </li>
           <li class="navigation__item">
             <a href="#" class="navigation__link">All Deals</a></li>
           <li class="navigation__item">
