--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Mulish:wght@400;700&family=Nunito:wght@400;700;800&display=swap"
     rel="stylesheet">
   <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css" />
+  <link rel="stylesheet" href="css/aos.css">
   <link rel="stylesheet" href="css/style.css">
   <title>Best Tour Plan - Hotel Booking</title>
 </head>
@@ -292,25 +293,28 @@
       <h2 class="activities__title">Other Activities</h2>
       <div class="activities-wrapper">
         <div class="card activities__card">
-          <img src="img/activiti.jpg" alt="The curious corner of chamarel" class="card__image">
+          <img src="img/activiti.jpg" alt="The curious corner of chamarel" class="card__image"
+            data-aos="zoom-out-right">
           <h3 class="card__title">The curious corner of chamarel</h3>
           <button class="card__button">Book Now</button>
         </div>
         <!-- /.card -->
         <div class="card activities__card">
-          <img src="img/activiti1.jpg" alt="Gymkhana club golf course" class="card__image">
+          <img src="img/activiti1.jpg" alt="Gymkhana club golf course" class="card__image" data-aos="zoom-out-down">
           <h3 class="card__title">Gymkhana club golf course</h3>
           <button class="card__button">Book Now</button>
         </div>
         <!-- /.card -->
         <div class="card activities__card">
-          <img src="img/activiti2.jpg" alt="Tamarind falls hiking trip - full day" class="card__image">
+          <img src="img/activiti2.jpg" alt="Tamarind falls hiking trip - full day" class="card__image"
+            data-aos="zoom-out-down">
           <h3 class="card__title">Tamarind falls hiking trip - full day</h3>
           <button class="card__button">Book Now</button>
         </div>
         <!-- /.card -->
         <div class="card activities__card">
-          <img src="img/activiti3.jpg" alt="The blue marine discovery quest" class="card__image">
+          <img src="img/activiti3.jpg" alt="The blue marine discovery quest" class="card__image"
+            data-aos="zoom-out-left">
           <h3 class="card__title">The blue marine discovery
             quest</h3>
           <button class="card__button">Book Now</button>
@@ -456,6 +460,7 @@
   <script src="js/jquery-3.6.0.min.js"></script>
   <script src="js/swiper-bundle.min.js"></script>
   <script src="js/jquery.validate.min.js"></script>
+  <script src="js/aos.js"></script>
   <script src="js/main.js"></script>
 </body>
 
