--- a/index.html
+++ b/index.html
@@ -307,7 +307,7 @@
         <!-- /.card -->
         <div class="card activities__card">
           <img src="img/activiti2.jpg" alt="Tamarind falls hiking trip - full day" class="card__image"
-            data-aos="zoom-out-down">
+            data-aos="zoom-out-up">
           <h3 class="card__title">Tamarind falls hiking trip - full day</h3>
           <button class="card__button">Book Now</button>
         </div>
