--- a/thankyou.html
+++ b/thankyou.html
@@ -5,6 +5,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Mulish:wght@400;700&family=Nunito:wght@400;700;800&display=swap"
     rel="stylesheet">
@@ -17,7 +18,7 @@
   <header class="navbar navbar__mobile--fixed">
     <div class="container">
       <div class="navbar-top">
-        <a href="#" class="logo">
+        <a href="/tour-plan/" class="logo">
           <img class="logo__image" src="img/horisontal-logo.svg" alt="Logo: Best Tour Plan">
         </a>
 
@@ -52,7 +53,7 @@
             </a>
             <!-- /user -->
           </li>
-          <li class="navigation__item navigation__item--mobile--visible">
+          <li class="navigation__item navigation__item--mobile--visible sf">
             <form action="#" class="search navbar__search navbar__search--mobile--visible">
               <input type="text" class="search__input" placeholder="Search Location">
               <button class="search__button">
@@ -97,10 +98,14 @@
     <!-- /.breadcrumb-list -->
   </nav>
   <div class="hotel-info">
-    <div class="hotel-info__text">
-
-      <h1 class="hotel-name hotel-info__name">Сообщение отправлено!</h1>
-      <p class="hotel-description">Наш менеджер перезвонит Вам в ближайшее время</p>
+    <div class="container">
+      <div class="hotel-info__text">
+        <h1 class="hotel-name hotel-info__name">Message sended!</h1>
+        <p class="hotel-description">Our manager recall Your</p>
+        <a href="/tour-plan/">
+          <span>Back to main page</span>
+        </a>
+      </div>
     </div>
     <!-- /.hotel-info__text -->
   </div>
@@ -110,7 +115,9 @@
   <footer class="footer">
     <div class="container">
       <div class="footer-wrapper">
-        <img src="img/vertical-logo.svg" alt="Logo: Best Tour Plan" class="logo footer__logo">
+        <a href="/tour-plan/" class="logo footer__logo">
+          <img src="img/vertical-logo.svg" alt="Logo: Best Tour Plan">
+        </a>
         <div class="footer__list footer__categories">
           <h3 class="footer__title">ALL CATEGORIES</h3>
           <ul class="footer__ul">
@@ -158,7 +165,7 @@
         </div>
         <!-- /.footer__list -->
         <div class="footer__contact-details">
-          <h3 class="footer__title footer__title--mb-3">contact details</h3>
+          <h3 class="footer__title footer__title--mt-2 footer__title--mb-3">contact details</h3>
           <p class="footer__text">Feel free to contact us by phone, email or by our contact form</p>
           <ul class="footer__ul">
             <li class="footer__item footer__item--mb-2">
@@ -171,23 +178,31 @@
               <div class="footer__icon-wrapper">
                 <img class="footer__icon" src="img/phone.svg" alt="Icon: phone">
               </div>
-              Tel (business hours) : 269 1500
-              Tel (hotline) Monday - Saturday: 52-56-61-38 (08:00 am – 20:00 pm)
-              Tel (hotline) Sunday: 52-56-61-38 (08:00 am – 14:00 pm)
+              <div>
+                Tel (business hours) : <a href="tel:" class="footer__connection">269 1500</a> <br>
+                Tel (hotline) Monday - Saturday: <a href="tel:" class="footer__connection">52-56-61-38</a> (08:00 am –
+                20:00 pm) <br>
+                Tel (hotline) Sunday: <a href="tel:" class="footer__connection">52-56-61-38</a> (08:00 am – 14:00 pm)
+              </div>
             </li>
             <li class="footer__item footer__item--mb-2">
               <div class="footer__icon-wrapper"><img class="footer__icon" src="img/mail.svg" alt="Icon:email"></div>
-              cherly.lawson@example.com
+              <a href="mailto:cherly.lawson@example.com" class="footer__connection">cherly.lawson@example.com</a>
             </li>
           </ul>
         </div>
         <!-- /.footer__contact-details -->
         <div class="footer__contacts-form">
           <h3 class="footer__title footer__title--mb-3">Send us a message</h3>
-          <form action="send.php" method="POST" class="footer__form">
-            <input type="text" class="input footer__input" placeholder="Your Full Name*" name="name">
-            <input type="text" class="input footer__input" placeholder="Phone Number*" name="phone">
-            <textarea class="footer__message" placeholder="Message" name="message"></textarea>
+          <form action="send.php" method="POST" class="form footer__form">
+            <div class="footer__input-group">
+              <input type="text" class="input footer__input" placeholder="Your Full Name*" name="name" required>
+            </div>
+            <div class="footer__input-group">
+              <input type="tel" class="input footer__input" placeholder="Phone Number*" name="phone" required
+                minlength="18">
+            </div>
+            <textarea class=" message footer__message" placeholder="Message" name="message"></textarea>
             <button class="button footer__button" type="submit">Send</button>
             <span class="footer__info">* Required Fields</span>
           </form>
@@ -214,7 +229,11 @@
     <!-- /.container -->
   </footer>
   <!-- /.footer -->
+  <script src="js/jquery-3.6.0.min.js"></script>
   <script src="js/swiper-bundle.min.js"></script>
+  <script src="js/jquery.validate.min.js"></script>
+  <script src="js/jquery.mask.min.js"></script>
+  <script src="js/aos.js"></script>
   <script src="js/main.js"></script>
 </body>
 
